# nn_backprop

./: README.md  nn.py  nn_iris.py  pyproject.toml
