[tool.poetry]
name = "ann example"
version = "0.1.0"
description = "Ejemplo de red neuronal con backprop"
authors = ["sergiohzlz <sergiohzlz@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.6, <3.11"
numpy = "1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
